🎨 Fix readability of certain colors

--- a/nordbootstrap_variables.scss
+++ b/nordbootstrap_variables.scss
@@ -32,7 +32,6 @@ $teal: #8FBCBB;
 $cyan: #81A1C1;
 $body-bg: $black;
 $body-color: $white;
-$yiq-text-dark: $white;
 $enable-shadows: true;
 $enable-gradients: true;
 $modal-content-bg: $gray-700;
@@ -74,7 +73,24 @@ $table-bg-level: 1;
 $input-bg: $gray-600;
 $input-disabled-bg: $gray-700;
 $input-color: $blue;
-$input-border-color: $gray-600;
-$input-placeholder-color: $white;
-$input-group-addon-bg: $gray-700;
+$text-muted: #8c94a4;
+$input-placeholder-color: $text-muted;
 $custom-control-cursor: $blue;
+$nav-tabs-link-active-color: $black;
+$nav-tabs-link-active-bg: $blue;
+$light: #8c94a4;
+$dark: $gray-700;
+$enable-responsive-font-sizes: true;
+$enable-prefers-reduced-motion-media-query: false;
+$mark-bg: $white;
+$blockquote-small-color: $text-muted;
+$nav-link-disabled-color: $text-muted;
+$input-group-addon-bg: $gray-600;
+$input-group-addon-color: $blue;
+$btn-link-disabled-color: $text-muted;
+$input-border-color: $gray-600;
+$custom-control-indicator-border-color: $text-muted;
+$custom-control-label-color: $blue;
+$custom-control-label-disabled-color: $text-muted;
+$custom-select-indicator-color: $blue;
+$enable-hover-media-query: true;
